Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-collabora
  namespace: nextcloud
  labels:
    app.kubernetes.io/name: collabora
    app.kubernetes.io/instance: nextcloud
spec:
  minReadySeconds: 0
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: collabora
      app.kubernetes.io/instance: nextcloud
  template:
    metadata:
      annotations:
        confighash: config-a624a3a9f800f896baee63d0d8bf41bb
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
      labels:
        app.kubernetes.io/name: collabora
        app.kubernetes.io/instance: nextcloud
    spec:
      terminationGracePeriodSeconds: 60
      serviceAccountName: default
      securityContext:
        {}
      containers:
        - name: collabora
          securityContext:
            {}
          image: "collabora/code:25.04.7.2.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9980
              protocol: TCP
          startupProbe:
            httpGet:
              path: /
              port: 9980
              scheme: HTTP
            failureThreshold: 30
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /
              port: 9980
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 30
            successThreshold: 1
            failureThreshold: 4
          readinessProbe:
            httpGet:
              path: /
              port: 9980
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 30
            successThreshold: 1
            failureThreshold: 2
          resources:
            {}
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: nextcloud-ca-store
              mountPath: /etc/ssl/certs
            - name: nextcloud-ca
              mountPath: /usr/local/share/ca-certificates/rootca.crt
              subPath: rootca.crt
      volumes:
        - name: tmp
          emptyDir: {}
        - name: nextcloud-ca-store
          persistentVolumeClaim:
            claimName: nextcloud-ca-store
        - name: nextcloud-ca
          secret:
            secretName: nextcloud-ca
            defaultMode: 0644
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-whiteboard
  namespace: nextcloud
  labels:
    app.kubernetes.io/name: whiteboard
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/component: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: whiteboard
      app.kubernetes.io/instance: nextcloud
      app.kubernetes.io/component: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: whiteboard
        app.kubernetes.io/instance: nextcloud
        app.kubernetes.io/component: app
    spec:
      containers:
        - name: whiteboard
          image: ghcr.io/nextcloud-releases/whiteboard:stable
          imagePullPolicy: IfNotPresent
          resources:
            {}
          ports:
            - name: whiteboard-http
              containerPort: 3002
              protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/component: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: nextcloud
      app.kubernetes.io/instance: nextcloud
      app.kubernetes.io/component: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nextcloud
        app.kubernetes.io/instance: nextcloud
        app.kubernetes.io/component: app
        nextcloud-redis-client: "true"
      annotations:
        nextcloud-config-hash: 8266a725d5474acb6adbf9f0609a3494dc3340a3ac306db90eac9ddb1b851960
        php-config-hash: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
        hooks-hash: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
    spec:
      containers:
        - name: nextcloud
          image: docker.io/library/nextcloud:32.0.6-apache
          imagePullPolicy: IfNotPresent
          resources:
            {}
          volumeMounts:
            - name: nextcloud-main
              mountPath: /var/www/
              subPath: root
            - name: nextcloud-main
              mountPath: /var/www/html
              subPath: html
            - name: nextcloud-main
              mountPath: /var/www/html/data
              subPath: data
            - name: nextcloud-main
              mountPath: /var/www/html/config
              subPath: config
            - name: nextcloud-main
              mountPath: /var/www/html/custom_apps
              subPath: custom_apps
            - name: nextcloud-main
              mountPath: /var/www/tmp
              subPath: tmp
            - name: nextcloud-main
              mountPath: /var/www/html/themes
              subPath: themes
            - name: nextcloud-hooks
              mountPath: /docker-entrypoint-hooks.d/post-installation/apphook.sh
              subPath: apphook.sh
            - name: nextcloud-ca-store
              mountPath: /etc/ssl/certs
            - name: nextcloud-ca
              mountPath: /usr/local/share/ca-certificates/rootca.crt
              subPath: rootca.crt
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /status.php
              port:  80
              httpHeaders:
              - name: Host
                value: "nextcloud.main.system"
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /status.php
              port:  80
              httpHeaders:
              - name: Host
                value: "nextcloud.main.system"
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
      volumes:
        - name: nextcloud-main
          persistentVolumeClaim:
            claimName: nextcloud-nextcloud
        - name: nextcloud-hooks
          configMap:
            name: nextcloud-hooks
            defaultMode: 0755
        - name: nextcloud-ca-store
          persistentVolumeClaim:
            claimName: nextcloud-ca-store
        - name: nextcloud-ca
          secret:
            secretName: nextcloud-ca
            defaultMode: 0644
      securityContext:
        fsGroup: 33
