Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: collabora
  namespace: nextcloud
  labels:
    app.kubernetes.io/name: collabora
    app.kubernetes.io/instance: nextcloud
spec:
  type: ClusterIP
  ports:
    - port: 9980
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: collabora
    app.kubernetes.io/instance: nextcloud

---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-whiteboard
  namespace: nextcloud
  labels:
    app.kubernetes.io/name: whiteboard
    app.kubernetes.io/instance: nextcloud
spec:
  type: ClusterIP
  ports:
    - port: 3002
      targetPort: whiteboard-http
      protocol: TCP
      name: whiteboard-http
  selector:
    app.kubernetes.io/name: whiteboard
    app.kubernetes.io/instance: nextcloud

---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-mariadb-headless
  namespace: nextcloud
  labels:
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/name: mariadb
spec:
  type: ClusterIP
  publishNotReadyAddresses: true
  clusterIP: None
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: mysql
  selector:
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/part-of: mariadb

---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-mariadb
  namespace: nextcloud
  labels:
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/part-of: mariadb
    app.kubernetes.io/component: primary
  annotations:
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: mysql
      nodePort: null
  selector:
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/component: primary

---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-postgresql-hl
  namespace: nextcloud
  labels:
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/component: primary
  annotations:
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/component: primary

---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-postgresql
  namespace: nextcloud
  labels:
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/component: primary
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
      nodePort: null
  selector:
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/component: primary

---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-redis-headless
  namespace: nextcloud
  labels:
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/name: redis
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: redis
  selector:
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/name: redis

---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-redis-master
  namespace: nextcloud
  labels:
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: master
spec:
  type: ClusterIP
  internalTrafficPolicy: Cluster
  sessionAffinity: None
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: redis
      nodePort: null
  selector:
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: master

---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-redis-replicas
  namespace: nextcloud
  labels:
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: replica
spec:
  type: ClusterIP
  internalTrafficPolicy: Cluster
  sessionAffinity: None
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: redis
      nodePort: null
  selector:
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: replica

---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/component: app
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/component: app
